# web_search_mcp

./: LICENSE  README.md  pyproject.toml  requirements.txt  sample_cline_mcp_settings.json
src/web_search_mcp/log_modules/: log_settings.py
src/web_search_mcp/mcp_modules/: mcp_server.py
src/web_search_mcp/web_modules/: search_wikipedia_ja.py  web_util.py
